Fix IE z-index Problem.

--- a/design/standard/stylesheets/leanbackPlayer.modified.css
+++ b/design/standard/stylesheets/leanbackPlayer.modified.css
@@ -3,8 +3,8 @@
 /* Release: 0.8.x                         */
 /****************************************/
 /* LeanBack Player - no HTML5, no Flash */
-.leanback-player-html-fallback {position: relative; text-align: center; font: 13px/1.231 arial, helvetica, sans-serif !important; color: #000 !important; z-index: 1002;}
-.leanback-player-html-fallback img {z-index: 1000;}
+.leanback-player-html-fallback {position: relative; text-align: center; font: 13px/1.231 arial, helvetica, sans-serif !important; color: #000 !important; z-index: 902;}
+.leanback-player-html-fallback img {z-index: 900;}
 .leanback-player-html-fallback div {position: relative; width: auto; min-width: 220px; height: 70px; left: 0; right: 0px; margin: -5px; padding: 5px 5px 0; background: #fff; z-index: 1001;}
 .leanback-player-html-fallback a {font-size: 12px; color: #000 !important; text-decoration: none;}
 .leanback-player-html-fallback a:hover {border-bottom: dotted 1px #000;}
@@ -13,7 +13,7 @@
 audio{display: block;width:400px;height:30px;}
 /************************************/
 /* LeanBack Player - Flash Fallback */
-.leanback-player-flash-fallback {position: absolute; margin: auto; text-align: center; z-index: 1003;}
+.leanback-player-flash-fallback {position: absolute; margin: auto; text-align: center; z-index: 903;}
 /*******************/
 /* IFrame Settings */
 iframe.h5_lb_player_smallscreen::-webkit-scrollbar, iframe.h5_lb_player_fullscreen::-webkit-scrollbar {display: none;}
@@ -48,7 +48,7 @@ body.h5_lb_iframe {
 /* Big Play Button */
 .h5_lb_player .big_play_button {
     position: absolute; top: 50%; left: 50%; margin:-25px 0 0 -25px; width: 50px; height: 50px; vertical-align: baseline;
-    border: 1px solid #1a1b1a; cursor: pointer !important; display: block; z-index: 1002;
+    border: 1px solid #1a1b1a; cursor: pointer !important; display: block; z-index: 902;
     /* Radius */
     -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;
     /* Background */
@@ -80,12 +80,12 @@ body.h5_lb_iframe {
 .h5_lb_player img.logo {position: absolute; height: auto; width: auto; margin: 0; top: 12px; left: 12px; border: 1px solid transparent; display: block; z-index: 1000;}
 /******************/
 /* Poster, Object */
-.h5_lb_player img.poster {position: absolute; margin: 0; top: 0; left: auto; right: auto; display: block; z-index: 1001;}
+.h5_lb_player img.poster {position: absolute; margin: 0; top: 0; left: auto; right: auto; display: block; z-index: 900;}
 .h5_lb_fullscreen img.poster {border: 0;}
 /***************/
 /* Control Bar */
 .h5_lb_controls {
-    position: absolute; top: auto; right: -1px; bottom: -1px; left: 1px; height: 29px; cursor: default; z-index: 1001;
+    position: absolute; top: auto; right: -1px; bottom: -1px; left: 1px; height: 29px; cursor: default; z-index: 901;
     /* Border */
     border-top: 1px solid #000;
     /* Disable selection */
